deploy/kubernetes/acr/overlays/development/scaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acr-api
spec:
  replicas: 1
